--- a/package.json
+++ b/package.json
@@ -23,11 +23,14 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "homepage": "https://github.com/saravanan-SM/saravanan-SM.github.io/portfolio",
   "eslintConfig": {
     "extends": [
       "react-app",
